# apl

./: CMakeLists.txt  readme.md
.github/workflows/: cmake-workflow.yml
.zed/: debug.json  tasks.json
apl/: CMakeLists.txt
apl/include/apl/: apl.h
apl_meta/: CMakeLists.txt
apl_meta/include/apl/: meta.h
apl_meta/include/apl/meta/: fold.h  platform.h  spin_wait.h
apl_sync/: CMakeLists.txt
apl_sync/include/apl/: sync.h
apl_sync/include/apl/sync/: double_buffer.h  seqlock.h  spinlock.h  spsc_fifo.h
app/: CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  array_bench.hpp  bench.cpp  bench_apl.cpp  cexlock_bench.hpp  double_buffer_bench.hpp  mod_bench.hpp  mwmr_queue_bench.hpp  random_bench.hpp  seqlock_bench.hpp  spinlock_bench.hpp  swsr_queue_bench.hpp
include/apl/: apl.hpp  array.hpp  double_buffer.hpp  events.hpp  functional.hpp  mod.hpp  mwmr_queue.hpp  notify.hpp  random.hpp  range.hpp  seqlock.hpp  shared.hpp  spinlock.hpp  swsr_queue.hpp  thread_group.hpp  threading.hpp  utility.hpp
include/apl/concurrency/: cexlock.hpp  seqlock.hpp  thread_group.hpp
include/apl/detail/: array_detail.hpp  common.hpp  mwmr_queue_detail.hpp  notify_detail.hpp  range_detail.hpp  shared_detail.hpp
include/apl/types/: array.hpp  mod.hpp  mwmr_circular_queue.hpp  mwmr_queue.hpp  range.hpp
include/apl/types/detail/: array_detail.hpp  common.hpp
include/apl_events/: CMakeLists.txt  apl_events.hpp
include/apl_events/include/: notify.hpp  shared.hpp
include/apl_events/include/detail/: notify_detail.hpp  shared_detail.hpp
include/apl_events/test/: CMakeLists.txt  test_apl_events.cpp  test_apl_events.hpp  test_notify.hpp  test_shared.hpp
include/apl_functional/: CMakeLists.txt  apl_functional.hpp
include/apl_functional/include/: combine.hpp  predicate.hpp  unary.hpp
include/apl_functional/test/: CMakeLists.txt  test_apl_functional.cpp  test_apl_functional.hpp  test_combine.hpp  test_predicate.hpp  test_unary.hpp
include/apl_threading/: CMakeLists.txt  apl_threading.hpp
include/apl_threading/bench/: CMakeLists.txt  bench_apl_threading.cpp  bench_apl_threading.hpp  bench_double_buffer.hpp  bench_mwmr_queue.hpp  bench_swsr_queue.hpp
include/apl_threading/include/: cexlock.hpp  double_buffer.hpp  mwmr_queue.hpp  seqlock.hpp  spinlock.hpp  swsr_queue.hpp  thread_group.hpp
include/apl_threading/include/detail/: common.hpp
include/apl_threading/test/: CMakeLists.txt  test_apl_threading.cpp  test_apl_threading.hpp  test_cexlock.hpp  test_double_buffer.hpp  test_mwmr_queue.hpp  test_seqlock.hpp  test_spinlock.hpp  test_swsr_queue.hpp  test_thread_group.hpp  test_types.hpp
include/apl_utility/: CMakeLists.txt  apl_utility.hpp
include/apl_utility/bench/: CMakeLists.txt  bench_apl_utility.cpp  bench_apl_utility.hpp  bench_mod.hpp  bench_random.hpp
include/apl_utility/include/: constexpr_for.hpp  inplace_fifo.hpp  inplace_lifo.hpp  inplace_vector.hpp  invoke_once.hpp  mod.hpp  predicate.hpp  random.hpp  range.hpp  repeat.hpp  static_stack.hpp  static_vector.hpp  unpack.hpp
include/apl_utility/test/: CMakeLists.txt  test_apl_utility.cpp  test_apl_utility.hpp  test_inplace_fifo.hpp  test_inplace_lifo.hpp  test_inplace_vector.hpp  test_invoke_once.hpp  test_mod.hpp  test_predicate.hpp  test_random.hpp  test_range.hpp  test_repeat.hpp  test_static_stack.hpp  test_static_vector.hpp  test_unpack.hpp
test/: CMakeLists.txt  array_tests.hpp  cexlock_tests.hpp  double_buffer_tests.hpp  mod_tests.hpp  mwmr_queue_test.hpp  notify_tests.hpp  random_tests.hpp  range_tests.hpp  seqlock_tests.hpp  shared_tests.hpp  spinlock_tests.hpp  swsr_queue_test.hpp  test_apl.cpp  test_types.hpp  thread_group_tests.hpp  unit_tests.cpp  utility_tests.hpp
tests/: CMakeLists.txt  array_bench.hpp  array_tests.hpp  bench.cpp  cexlock_bench.hpp  cexlock_tests.hpp  double_buffer_bench.hpp  double_buffer_tests.hpp  mod_bench.hpp  mod_tests.hpp  mwmr_circular_queue_test.hpp  mwmr_queue_bench.hpp  mwmr_queue_test.hpp  random_bench.hpp  random_tests.hpp  range_tests.hpp  seqlock_bench.hpp  seqlock_tests.hpp  swsr_queue_bench.hpp  swsr_queue_test.hpp  test_types.hpp  thread_group_tests.hpp  unit_tests.cpp  utility_tests.hpp
